--- a/src/styles/general.sass
+++ b/src/styles/general.sass
@@ -7,6 +7,14 @@
         color: #fde400
         transition: all 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s
 
+    @media screen and (max-width: 768px)
+        padding-right: 10px
+        font-size: 11px
+
+.logo
+    @media screen and (max-width: 768px)
+        width: 100px
+
 body
     background-color: #010d30
     height: 100vh
@@ -26,8 +34,11 @@ footer
     display: flex
     justify-content: center
     bottom: 0
-    width:100vw
+    width: 100vw
     height: 50px
+
+    @media screen and (max-width: 768px)
+        height: 30px
 
 main
     padding-left: 20px
@@ -40,18 +51,100 @@ main
         font-weight: 500
         color: #fde800
 
+        @media screen and (max-width: 768px)
+            font-size: 16px
+
     p
         font-size: 18px
         color: #00ffa2
         font-weight: 400
+        font-family: mono
+        word-spacing: 2px
+        letter-spacing: 2.2px
         margin-bottom: 25px
+        @media screen and (max-width: 768px)
+            font-size: 12px
+    
+    @media screen and (max-width: 768px)
+        padding-left: 15px
+        padding-right: 15px
+
+.home_div
+    display: flex
+    flex-direction: column
+    width: 100%
+    align-items: center
+    justify-content: center
+
+    &:hover
+        .home_Link
+            img
+                transform: scale(1.04)
+                transition: all 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s
+
+    .home_Link
+        display: flex
+        flex-direction: row
+        gap: 20px
+        margin-bottom: 20px
+        width: 100%
+        align-items: center
+        
+        @media screen and (max-width: 768px)
+            flex-direction: column
+            margin-bottom: 0px
+            gap: 5px
+        
+        .content
+            @media screen and (max-width: 768px)
+                width: 100%
+                height: 100%
+                display: flex
+                flex-direction: column
+                align-items: center
+                justify-content: center 
+            
+
+    @media screen and (max-width: 768px)
+        flex-direction: column
+        height: 600px
+        height: 100%
+
+.event_img
+    &:hover
+        transform: scale(1.04)
+        transition: all 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s
+
+.image
+    width: 500px
+    height: 400px
+    border-radius: 14px
+    object-fit: cover
+    margin-bottom: 5px
+    display: flex
+    align-items: center
+    justify-content: center
+
+    @media screen and (max-width: 768px)
+        width: 100%
+        height: 100%
+
 
     img
-        width: 400px
-        height: 230px
-        border-radius: 20px
+        width: 100%
+        height: 100%
+        border-radius: 14px
         object-fit: cover
-        margin-bottom: 5px
-        border: 2px solid #cbc8ae
 
+        @media screen and (max-width: 768px)
+            width: 300px
+            height: 200px
+            border-radius: 12px
+            object-fit: cover
+            margin-bottom: 5px
 
+.solo-img
+    &:hover
+        transform: scale(1.06)
+        transition: all 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s
+        
