--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -150,3 +150,38 @@ a {
   -webkit-text-fill-color: transparent;
   background-clip: text;
 }
+
+.evt-grd{
+  background: radial-gradient(
+    64.18% 64.18% at 71.16% 35.69%,
+    #f39fdf 0.89%,
+    #ed97d9 17.23%,
+    #f09dea 42.04%,
+    #fd29a5 55.12%,
+    #e65cc8 71.54%,
+    #f202ce 100%
+  );
+  animation: shine 2s infinite linear;
+  animation-fill-mode: forwards;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+
+
+.home_Link{
+  background: radial-gradient(
+    64.18% 64.18% at 71.16% 35.69%,
+    #9ff39f 0.89%,
+    #a4ed97 17.23%,
+    #9df0af 42.04%,
+    #fdef29 55.12%,
+    #81e65c 71.54%,
+    #f2ee02 100%
+  );
+  animation: shine 2s infinite linear;
+  animation-fill-mode: forwards;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
