--- a/src/styles/general.sass
+++ b/src/styles/general.sass
@@ -45,6 +45,7 @@ main
     width: 100%
     max-width: 1450px
     margin: auto
+    min-height: 80vh
 
     h2
         font-size: 25px
@@ -64,7 +65,7 @@ main
         margin-bottom: 25px
         @media screen and (max-width: 768px)
             font-size: 12px
-    
+
     @media screen and (max-width: 768px)
         padding-left: 15px
         padding-right: 15px
@@ -75,7 +76,6 @@ main
     width: 100%
     align-items: center
     justify-content: center
-
     &:hover
         .home_Link
             img
@@ -83,18 +83,19 @@ main
                 transition: all 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s
 
     .home_Link
+
         display: flex
         flex-direction: row
         gap: 20px
         margin-bottom: 20px
         width: 100%
         align-items: center
-        
+
         @media screen and (max-width: 768px)
             flex-direction: column
             margin-bottom: 0px
             gap: 5px
-        
+
         .content
             @media screen and (max-width: 768px)
                 width: 100%
@@ -102,8 +103,7 @@ main
                 display: flex
                 flex-direction: column
                 align-items: center
-                justify-content: center 
-            
+                justify-content: center
 
     @media screen and (max-width: 768px)
         flex-direction: column
@@ -111,13 +111,29 @@ main
         height: 100%
 
 .event_img
+    width: 30vw
+    height: 40vh
     &:hover
         transform: scale(1.04)
         transition: all 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s
 
+.city-e-img
+    width: 50vw
+    height: 40vh
+    &:hover
+        transform: scale(1.04)
+        transition: all 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s
+    @media screen and (max-width: 950px)
+        width: 40vw
+        height: 29vh
+
+    @media screen and (max-width: 639px)
+        width: 100%
+        height: 100%
+
 .image
-    width: 500px
-    height: 400px
+    width: 40vw
+    height: 40vh
     border-radius: 14px
     object-fit: cover
     margin-bottom: 5px
@@ -128,7 +144,6 @@ main
     @media screen and (max-width: 768px)
         width: 100%
         height: 100%
-
 
     img
         width: 100%
@@ -147,4 +162,12 @@ main
     &:hover
         transform: scale(1.06)
         transition: all 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s
-        
+
+.card
+    display: flex
+    flex-wrap: wrap
+    padding-right: 25px
+
+.card .home_div:nth-child(even)
+    direction: rtl
+    padding-right: 20px
