changed color of header and footer
Signed-off-by: heyhiru <hirentimbadiya74@gmail.com>

--- a/src/styles/general.sass
+++ b/src/styles/general.sass
@@ -22,13 +22,15 @@ body
     font-family: poppins
 
 header
-    background-image: linear-gradient(304deg , #010d30e4 , #010d30e4 )
+    background-image: linear-gradient(304deg , #42607f91 , #1b283591)
     color: rgba(223, 223, 223, 0.904)
     font-weight: 550
 
 footer
-    background-image: linear-gradient(353deg , #69cfad , transparent)
+    background-image: linear-gradient(353deg  , #42617fc5, #1b2835d5)
     color: white
+    word-spacing: 1px
+    letter-spacing: 2px
     font-weight: 500
     align-items: center
     display: flex
