--- a/src/styles/general.sass
+++ b/src/styles/general.sass
@@ -53,6 +53,7 @@ main
         font-size: 25px
         font-weight: 500
         color: #fde800
+        font-family: ubuntu
 
         @media screen and (max-width: 768px)
             font-size: 16px
@@ -61,7 +62,7 @@ main
         font-size: 18px
         color: #00ffa2
         font-weight: 400
-        font-family: mono
+        font-family: ubuntu
         word-spacing: 2px
         letter-spacing: 2.2px
         margin-bottom: 25px
