--- a/src/styles/general.sass
+++ b/src/styles/general.sass
@@ -119,6 +119,13 @@ main
     &:hover
         transform: scale(1.04)
         transition: all 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s
+    @media screen and (max-width: 768px)
+        width: 100%
+        height: 100%
+    
+    @media screen and (max-width: 1050px)
+        width: 70%
+        height: 100% 
 
 .city-e-img
     width: 50vw
